<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e1e0e0"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kholoudali.quizapp.QuizActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e1e0e0"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:fontFamily="monospace"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/intotxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="monospace"
            android:text="@string/intro_txt"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/q1_txt"
                android:textSize="20sp"
                android:textStyle="bold" />


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/q1_rg">

                <RadioButton
                    android:id="@+id/Q1_radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_option1" />

                <RadioButton
                    android:id="@+id/Q1_radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_option2" />

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="@android:color/white"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/q2_txt"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Q2_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/q2_placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/question3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/q3_txt"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/q3_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3_hint"
                android:textColor="@android:color/darker_gray"/>

            <CheckBox
                android:id="@+id/Q3_checkbox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3_option1" />

            <CheckBox
                android:id="@+id/Q3_checkbox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3_option2" />

            <CheckBox
                android:id="@+id/Q3_checkbox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3_option3" />

            <CheckBox
                android:id="@+id/Q3_checkbox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3_option4" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/question4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/q4_txt"
                android:textSize="20sp"
                android:textStyle="bold" />


            <RadioGroup
                android:id="@+id/Q4_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/Q4_radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_option1" />

                <RadioButton
                    android:id="@+id/Q4_radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_option2" />

                <RadioButton
                    android:id="@+id/Q4_radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_option3" />

                <RadioButton
                    android:id="@+id/Q2_radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_option4" />
            </RadioGroup>


        </LinearLayout>
    </LinearLayout>

</ScrollView>